helm/cilium/manifest/tlsgateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nscubed-tls-gateway
  annotations:
    cert-manager.io/cluster-issuer: nscubed-cluster-issuer
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTPS
    port: 443
    hostname: "*.nscubed.lan"
    name: web-tls-gw
    allowedRoutes:
      namespaces:
        from: All
    tls:
      certificateRefs:
        - name: tls-gateway-secret
  - protocol: HTTP
    port: 80
    name: web-gw
    allowedRoutes:
      namespaces:
        from: All
