helm/cilium/manifest/hubblehttproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-route
  namespace: kube-system
spec:
  hostnames:
  - "hubble.nscubed.lan"

  parentRefs:
  - name: nscubed-tls-gateway
    namespace: default

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: hubble-ui
      port: 80
